# using_orxhub_tutorial

./: README.md  orxpm.sh
.orxpm/: README.md
android/: .gitignore  build.gradle
android/src/jni/: Android.mk  Application.mk
android/src/main/: AndroidManifest.xml
android/src/main/assets/: .gitignore  common  orx.ini  orxd.ini  orxpm
android/src/main/java/org/orx_project/orx_template/: OrxTemplate.java
android/src/main/res/values/: strings.xml
data/: game.ini
data/android/: android.ini  android_debug.ini
data/common/: common.ini  soldier.ini
data/desktop/: desktop.ini
doc/: animgraph.md  build_instructions.md  orxpp_configutils.md  orxpp_list.md
src/: CMakeLists.txt
src/cmake/: execute_in_sibling_folder.ini
src/common/: main.cpp
src/lib/: README.md
src/lib/commands/: animgraph.cpp  animgraph.h
src/lib/orxpp/: configutils.h  list.h
src/orxpm/: .gitattributes  orxpm.cpp  orxpm.h
src/orxpm/union/: README.md  bootstrap_calls.inl  includes.inl
